bk_ida/gccida/g1/ix86_address_cost
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_address_cost/src/i386.c:5064:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4601, "ix86_address_cost"); 
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_address_cost/src/obj/i386.o] Error 1
